--- a/automations.yaml
+++ b/automations.yaml
@@ -516,3 +516,16 @@
     data:
       entity_id: input_select.ac_fan
       option: "Auto"
+- alias: Tv On
+  id: turn_tv_on
+  trigger:
+  - platform:
+    entity_id: person.andrew
+    from: not_home
+    to: home
+  action:
+  - service: remote.send_command
+    data:
+      entity_id: remote.broadlink
+      device: "TV"
+      command: "Off"
