--- a/automations.yaml
+++ b/automations.yaml
@@ -519,7 +519,7 @@
 - alias: Tv On
   id: turn_tv_on
   trigger:
-  - platform:
+  - platform: state
     entity_id: person.andrew
     from: not_home
     to: home
