--- a/configuration.yaml
+++ b/configuration.yaml
@@ -174,6 +174,7 @@ switch:
             entity_id: remote.broadlink
             device: "TV"
             command: "On"
+        turn_off:
         - service: media_player.turn_off
           data:
             entity_id: media_player.tv
