--- a/automations.yaml
+++ b/automations.yaml
@@ -206,6 +206,18 @@
       - 255
       - 80
       - 0
+  - service: input_select.select_option
+    data:
+      entity_id: input_select.ac_mode
+      option: "Cool"
+  - service: input_select.select_option
+    data:
+      entity_id: input_select.ac_fan
+      option: "Low"
+  - service: input_number.set_value
+    data:
+      entity_id: input_number.ac_temp
+      value: 78
 - alias: Andrew wakes up
   trigger:
   - platform: event
