ac_mode not ac_mod

--- a/automations.yaml
+++ b/automations.yaml
@@ -564,7 +564,7 @@
     entity_id: cover.right_blind
     below: 35
   - platform: state
-    entity_id: sensor.ac_mod
+    entity_id: sensor.ac_mode
     from: "Off"
   condition:
     condition: not
