--- a/automations.yaml
+++ b/automations.yaml
@@ -378,8 +378,8 @@
     event_data:
       action: goodnight
   action:
-  - service: homeassistant.turn_off
-    entity_id: group.all_lights
+  - service: light.turn_off
+    entity_id: light.main_lights
   - service: light.turn_on
     entity_id: light.vanity
     data:
