--- a/automations.yaml
+++ b/automations.yaml
@@ -259,7 +259,7 @@
       brightness: 180
       color_temp: 400
   - service: light.turn_on
-    entity_id: light.vanity
+    entity_id: light.bathroom
     data:
       brightness: 100
       color_temp: 400
@@ -379,11 +379,11 @@
       action: goodnight
   action:
   - service: light.turn_off
-    entity_id: light.main_lights
+    entity_id: light.all_lights
   - service: light.turn_on
-    entity_id: light.vanity
+    entity_id: light.bathroom_1
     data:
-      brightness: 10
+      brightness: 30
 - alias: Andrew arrives home
   id: arrive_home
   trigger:
