--- a/sensors.yaml
+++ b/sensors.yaml
@@ -126,3 +126,38 @@
       friendly_name: "Ambient Humidity"
       value_template: >-
         {{ state_attr('weather.knyc_daynight','humidity')}}
+- platform: template
+  sensors:
+    recommend_ac:
+      friendly_name: "Recommend AC"
+      value_template: >-
+        {% set temp_feel = 0 %}
+        {% set temp_adj = 0 %}
+        {% if states("sensor.weather_humidity") | float >= 80 %}
+        {% set temp_adj = 10 %}
+        {% elif states("sensor.weather_humidity") | float >= 60 %}
+        {% set temp_adj = 7 %}
+        {% elif states("sensor.weather_humidity") | float >= 40 %}
+        {% set temp_adj = 5 %}
+        {% endif %}
+        {% set temp_feel = (states("sensor.weather_temperature") | int) + temp_adj %}
+        {% if temp_feel > 74 %}
+        yes
+        {% else %}
+        no
+        {% endif %}
+          recommend_ac:
+    recommend_ac_temp:
+      friendly_name: "Recommended AC temp"
+      value_template: >-
+        {% set temp_feel = 0 %}
+        {% set temp_adj = 0 %}
+        {% if states("sensor.weather_humidity") | float >= 80 %}
+        {% set temp_adj = 10 %}
+        {% elif states("sensor.weather_humidity") | float >= 60 %}
+        {% set temp_adj = 7 %}
+        {% elif states("sensor.weather_humidity") | float >= 40 %}
+        {% set temp_adj = 5 %}
+        {% endif %}
+        {% set temp_feel = (states("sensor.weather_temperature") | int) + temp_adj %}
+        {{ temp_feel - 5 }}
