--- a/automations.yaml
+++ b/automations.yaml
@@ -579,8 +579,9 @@
   - condition: state
     entity_id: person.andrew
     state: home
-  - condition: template
-    value_template: "{% if states('sensor.recommend_ac') == 'yes'%}true{%endif}"
+  trigger:
+  - platform: template
+    value_template: "{% if states('sensor.recommend_ac') == 'yes' %}true{%endif%}"
   action:
   - service: input_select.select_option
     data_template:
