--- a/sensors.yaml
+++ b/sensors.yaml
@@ -146,4 +146,4 @@
     recommend_ac_temp:
       friendly_name: "Recommended AC temp"
       value_template: >-
-        {{ (78 - ((states("sensor.apparent_temperature") | int) - 76) / 2) | round(0) }}
+        {{ 78 - ((apparent_temperature | round(0) - 72) / 2) }}
