--- a/automations.yaml
+++ b/automations.yaml
@@ -585,6 +585,9 @@
   - condition: state
     entity_id: switch.asleep
     state: "on"
+  - condition: state
+    entity_id: switch.auto_ac
+    to: "on"
   trigger:
   - platform: template
     value_template: "{{ states('sensor.recommend_ac') }}"
@@ -592,6 +595,10 @@
     entity_id: sensor.recommend_ac_temp
   - platform: state
     entity_id: switch.asleep
+    from: "off"
+    to: "on"
+  - platform: state
+    entity_id: switch.auto_ac
     from: "off"
     to: "on"
   action:
@@ -621,6 +628,9 @@
   - condition: state
     entity_id: switch.asleep
     state: "on"
+  - condition: state
+    entity_id: switch.auto_ac
+    state: "on"
   trigger:
   - platform: template
     value_template: "{% if states('sensor.recommend_ac') == 'false' %}true{%else%}false{%endif%}"
@@ -628,6 +638,10 @@
     entity_id: sensor.recommend_ac_temp
   - platform: state
     entity_id: switch.asleep
+    from: "off"
+    to: "on"
+  - platform: state
+    entity_id: switch.auto_ac
     from: "off"
     to: "on"
   action:
