--- a/sensors.yaml
+++ b/sensors.yaml
@@ -30,23 +30,23 @@
   sensors:
     roomba_battery_level:
       value_template: >
-        {{ states.vacuum.the_dog.attributes.battery_level }}
+        {{ states.vacuum.dog.attributes.battery_level }}
       friendly_name: Battery Level
       unit_of_measurement: '%'
-      icon_template: '{{ states.vacuum.the_dog.attributes.battery_icon }}'
+      icon_template: '{{ states.vacuum.dog.attributes.battery_icon }}'
 
 - platform: template
   sensors:
     roomba_current_status:
       value_template: >
-        {{ states.vacuum.the_dog.attributes.status }}
+        {{ states.vacuum.dog.attributes.status }}
       friendly_name: Status
 
 - platform: template
   sensors:
     roomba_bin_full:
       value_template: >-
-        {% if state_attr('vacuum.the_dog','bin_full') %}
+        {% if state_attr('vacuum.dog','bin_full') %}
         Bin is full
         {% else %}
         Bin is not full
@@ -57,17 +57,17 @@
   sensors:
     roomba_status:
       value_template: >
-        {% if is_state('status.vacuum.the_dog.attributes.bin_full', 'true') %}
-        {{ states.vacuum.the_dog.attributes.status }}
+        {% if is_state('status.vacuum.dog.attributes.bin_full', 'true') %}
+        {{ states.vacuum.dog.attributes.status }}
 
         Bin is full
         {% else %}
-        {{ states.vacuum.the_dog.attributes.status }}
+        {{ states.vacuum.dog.attributes.status }}
 
         Bin is not full
         {% endif %}
-      icon_template: '{{ states.vacuum.the_dog.attributes.battery_icon }}'
-      friendly_name_template: '{{ states.vacuum.the_dog.attributes.battery_level }}%'
+      icon_template: '{{ states.vacuum.dog.attributes.battery_icon }}'
+      friendly_name_template: '{{ states.vacuum.dog.attributes.battery_level }}%'
 
 
 - platform: template
